Add filter text to Version Control preferences
Introduced a search field above the table in the Version Control tab
of the Preferences page to allow filtering entries.

--- a/team/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/team/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -355,6 +355,8 @@ ResourceMappingMergeOperation_2=&Done
 ResourceMappingMergeOperation_3=Multiple potential side effects of this operation have been detected.
 ResourceMappingMergeOperation_4=Preview the merge before it is performed
 
+VersionControl_FilterMessage=type filter text
+
 CompressedFoldersModelProvider_0=&Compressed Folders
 HierarchicalModelProvider_0=&Tree
 UIProjectSetSerializationContext_0=Project {0} exists in the workspace. Overwrite {0}?
