Add a warning if join is called and JobManager is suspended
Currently there is a situation that is really hard to notice but quite
dangerous results. When the JobManager is suspended and one calls join()
on a Job this is a no-op and it returns silently without even try to
wait for the job as it could lead to deadlocks. Code using join in such
situation will likely fail in an random way depending on if the job has
already finished fast enough.

This now adds a warning whenever this situation occurs to having a
chance to be noticed and mitigated.

--- a/runtime/bundles/org.eclipse.core.jobs/src/org/eclipse/core/internal/jobs/messages.properties
+++ b/runtime/bundles/org.eclipse.core.jobs/src/org/eclipse/core/internal/jobs/messages.properties
@@ -14,6 +14,7 @@
 ### Runtime jobs plugin messages
 
 ### Job Manager and Locks
+JobManager_suspended_problem=Join was called on job \"{0}\" while JobManager is suspended, this will not work as expected\!
 jobs_blocked0=The user operation is waiting for background work to complete.
 jobs_blocked1=The user operation is waiting for \"{0}\" to complete.
 jobs_unblocked=The user operation is not waiting anymore.
